--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ config.py
 
 # OS files
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
